--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -233,6 +233,67 @@ section { padding: 6rem 0; }
     color: #ffffff;
 }
 
+/* --- CUSTOM GITHUB BADGE STYLES --- */
+.github-badge {
+    display: block;
+    width: 252px;
+    background-color: #000;
+    border-radius: 8px;
+    overflow: hidden;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #171729;
+}
+
+.github-badge-header {
+    background-color: #24292e; /* GitHub Header Grey */
+    padding: 0.41rem;
+}
+
+.github-badge-header .github-icon {
+    width: 24px;
+    height: 24px;
+    fill: #fff;
+}
+
+.github-badge-body {
+    padding: 0.20rem;
+    text-align: left;
+    padding-left: 1rem;
+}
+
+.github-badge-photo {
+    width: 57px;
+    height: 57px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 0.75rem;
+}
+
+.github-badge-handle {
+    display: block;
+    font-size: 1rem;
+    color: #ffffff;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    font-family: proxima-nova, sans-serif;
+}
+
+.github-badge-button {
+    display: inline-block;
+    padding: 0rem 1.06rem;
+    border: 1px solid #fff;
+    border-radius: 21px;
+    font-weight: 504;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.github-badge:hover .github-badge-button {
+    background-color: #1a1a1a;
+    color: #ffffff;
+}
+
+
 /* --- CUSTOM X (TWITTER) BADGE STYLES --- */
 .x-badge {
     display: block;
@@ -303,4 +364,8 @@ section { padding: 6rem 0; }
     h2 { font-size: 2rem; }
     .main-header .container { flex-direction: column; }
     .main-nav { margin-top: 1rem; }
+    .social-links {
+        flex-direction: column;
+        gap: 1.5rem;
+    }
 }
