--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,10 +56,10 @@ section { padding: 6rem 0; }
     border: 2px solid var(--primary-color);
     transition: transform 0.3s ease;
 }
-
+/*
 .header-headshot:hover {
-    transform: scale(1.15);
-}
+    transform: scale(1.05);
+}*/
 /* --- END STYLES --- */
 
 .logo { font-size: 1.5rem; font-weight: 700; color: var(--primary-color); text-decoration: none; }
